// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global/components/utility/Pagination matches the snapshot 1`] = `
<nav
  aria-label="Pagination"
  className="list-pagination"
>
  <ul
    className="list-pagination__columns"
  >
    <li
      className="list-pagination__column"
    >
      <ul>
        <li
          className="list-pagination__page list-pagination__page--prev list-pagination__page--disabled"
          key="previous"
        >
          <a
            disabled={true}
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <IconComposer
              fill="currentColor"
              icon="arrowLongLeft16"
              screenReaderText="previous page"
              svgProps={
                Object {
                  "aria-hidden": true,
                }
              }
            />
            <span
              className="list-pagination__icon-label"
            >
              PREV
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="list-pagination__column-middle"
    >
      <ul
        className="list-pagination__pages"
      >
        <li
          className="list-pagination__page list-pagination__page--ordinal list-pagination__page--disabled"
          key="1"
        >
          <a
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              aria-hidden="true"
            >
              1
            </span>
            <span
              className="screen-reader-text"
            >
              Go to page: 
              1
            </span>
          </a>
        </li>
        <li
          className="list-pagination__page list-pagination__page--ordinal"
          key="2"
        >
          <a
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              aria-hidden="true"
            >
              2
            </span>
            <span
              className="screen-reader-text"
            >
              Go to page: 
              2
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="list-pagination__column"
    >
      <ul>
        <li
          className="list-pagination__page list-pagination__page--next"
          key="next"
        >
          <a
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              className="list-pagination__icon-label"
            >
              NEXT
            </span>
            <IconComposer
              fill="currentColor"
              icon="arrowLongRight16"
              screenReaderText="next page"
              svgProps={
                Object {
                  "aria-hidden": true,
                }
              }
            />
          </a>
        </li>
      </ul>
    </li>
  </ul>
</nav>
`;

exports[`global/components/utility/Pagination when it is compact matches the snapshot 1`] = `
<nav
  aria-label="Pagination"
  className="list-pagination list-pagination--compact"
>
  <ul
    className="list-pagination__columns"
  >
    <li
      className="list-pagination__column"
    >
      <ul>
        <li
          className="list-pagination__page list-pagination__page--prev list-pagination__page--disabled"
          key="previous"
        >
          <a
            disabled={true}
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <IconComposer
              fill="currentColor"
              icon="arrowLongLeft16"
              screenReaderText="previous page"
              svgProps={
                Object {
                  "aria-hidden": true,
                }
              }
            />
            <span
              className="list-pagination__icon-label"
            >
              PREV
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="list-pagination__column-middle"
    >
      <ul
        className="list-pagination__pages"
      >
        <li>
          <span>
            Page 
            1
             
            /
             
            2
          </span>
        </li>
      </ul>
    </li>
    <li
      className="list-pagination__column"
    >
      <ul>
        <li
          className="list-pagination__page list-pagination__page--next"
          key="next"
        >
          <a
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              className="list-pagination__icon-label"
            >
              NEXT
            </span>
            <IconComposer
              fill="currentColor"
              icon="arrowLongRight16"
              screenReaderText="next page"
              svgProps={
                Object {
                  "aria-hidden": true,
                }
              }
            />
          </a>
        </li>
      </ul>
    </li>
  </ul>
</nav>
`;

exports[`global/components/utility/Pagination when there are no pagination props renders to null 1`] = `""`;
